Fix gradient bug in dark mode

--- a/freesound/static/bw-frontend/styles/atoms/collapsableBlock.scss
+++ b/freesound/static/bw-frontend/styles/atoms/collapsableBlock.scss
@@ -6,7 +6,7 @@
   }
 
   &-close-gradient {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(to bottom, rgba($black, 1) 0%, rgba($black, 1) 50%, rgba($black, 0) 100%);
     background-clip: text;
     color: transparent;
   }
